# serve_f2k4b_quantized

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
scripts/: launch.sh  minimal_cublas_gemm.py
serve_f2k4b_quantized/: __init__.py  config.py  loader.py  quanto_wrapper.py  server.py
tests/: conftest.py  test_config.py  test_integration.py
